# ocean-hiring-agent

./: .env  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_README.md  INTERVIEW_FEATURES.md  README.md  api.py  compatibility_analyzer.py  create_interview.py  docker-compose.yml  main.py  models.py  old_code.py  personality_extractor.py  pyproject.toml  test_api.py
analyzer/: __init__.py  env.example  main.py  pyproject.toml  rate_limiter.py  utils.py
backend/: .dockerignore  .env.example  Dockerfile  ai_assistant.py  api.py  compatibility_analyzer.py  interview_manager.py  models.py  personality_extractor.py  pyproject.toml  test_api.py  test_weaviate_connection.py
backend/tests/: __init__.py  run_all_tests.py  test_ai_assistant.py  test_mistral_api.py  test_weaviate_connection.py
data/: candidate_alice_smith.json  candidate_amine_marzouki.json  candidate_bob_johnson.json  candidate_carol_davis.json  candidate_david_lee.json  candidate_elon_musk.json  candidate_hamza_karzaz.json  candidate_lynda_dupont.json  candidate_mohammed_elasri.json  compatibility_scores.json  compatibility_scores.json.old  compatibility_scores_new.json  interviews.json  team.json
data/c_data_for_analyzer/: candidates_analysis_20250525_111956.json  candidates_analysis_20250525_112721.json  candidates_analysis_20250525_115436.json  candidates_analysis_20250525_120755.json  (+4 more)
ui/: .dockerignore  COMPATIBILITY_FIX.md  DASHBOARD_SUMMARY.md  Dockerfile  README.md  app.py  healthcheck.py  pyproject.toml  quick_test.py  run.py  start_dashboard.sh  test_dashboard.py
ui/templates/: home.html  (+3 more)
(+8 files in other folders)
