[project]
name = "tech-europe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "mistralai>=1.7.1",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
